--- a/taskFlow.html
+++ b/taskFlow.html
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Task Flow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="taskFlow.css" />
+    <script type="text/javascript" src="jquery-3.3.1.js"></script>
     
 </head>
 <body>
- 
-    
+    <div class="header">
+        <h1>Task Flow</h1>
+    </div>
+    <div id="main-container">
+        <div class="area" id="start-area">
+            <div class="area-header">
+                <h2>Tasks</h2>
+            </div>
+        </div>
+        <div class="area" id="inProgress-area">
+            <div class="area-header">
+                <h2>In Progress</h2>
+            </div>
+        </div>
+        <div class="area" id="Done-Area">
+             <div class="area-header">
+                <h2>Done</h2>
+            </div>
+        </div>
+    </div>
 
 
 
