--- a/taskFlow.html
+++ b/taskFlow.html
@@ -19,15 +19,26 @@
             <div class="area-header">
                 <h2>Tasks</h2>
             </div>
+            <div class="area-body">
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
         </div>
         <div class="area" id="inProgress-area">
             <div class="area-header">
                 <h2>In Progress</h2>
             </div>
+            <div class="area-body">
+
+             </div>
         </div>
         <div class="area" id="Done-Area">
              <div class="area-header">
                 <h2>Done</h2>
+            </div>
+            <div class="area-body">
+
             </div>
         </div>
     </div>
