Added progress bar feature and changed styling

--- a/taskFlow.html
+++ b/taskFlow.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Task Flow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> <!-- google fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"> <!-- google fonts -->
     <link rel="stylesheet" type="text/css" media="screen" href="taskFlow.css"> <!-- css file -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> <!-- font awesome icons -->
@@ -15,6 +15,9 @@
     <div class="header">
         <h1>Task Flow</h1>
         <input placeholder="Add a task" id="add-task" type="text">
+    </div>
+    <div id="progress-container">
+        <div id="progress-bar">0%</div>
     </div>
     <div id="main-container">
         <div class="area" id="start-area">
